[project]
name = "project-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.6.3",
    "duckduckgo-search>=8.0.4",
    "google-genai>=1.21.1",
    "matplotlib>=3.10.3",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "yfinance>=0.2.63",
]
